provarAnt/00D190000000ZY2EAM/objects/Dealer_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Analyses</relationshipLabel>
        <relationshipName>Dealer_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;Save and then attach Dealer Analysis&quot;</defaultValue>
        <inlineHelpText>text field to give instruction to the user</inlineHelpText>
        <label>Instructions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_BU__c</fullName>
        <label>Related BU</label>
        <picklist>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Notes__c</fullName>
        <inlineHelpText>enter some notes that describe the dealer analysis being attached</inlineHelpText>
        <label>Type Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Dealer Analysis</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Dealer__c</columns>
        <columns>Related_BU__c</columns>
        <columns>Type_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dealer Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>